# tgstate-rust

./: .env.example  Cargo.toml  README.md  SECURITY.md
.github/workflows/: build-alpine.yml
app/static/: ui.css  ui.js
app/static/js/: main.js
app/templates/: base.html  download.html  image_hosting.html  index.html  pwd.html  settings.html  welcome.html
src/: auth.rs  config.rs  constants.rs  database.rs  main.rs  state.rs
src/middleware/: auth.rs  rate_limit.rs  security_headers.rs
src/routes/: api_auth.rs  api_files.rs  api_health.rs  api_settings.rs  api_upload.rs  mod.rs  pages.rs
src/telegram/: bot_polling.rs  service.rs  types.rs
